--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Cat of the Day</title>
+    <title>Cat of Today</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         body {
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <h1>Cat of the Day</h1>
+    <h1>Cat of Today</h1>
     <div id="dateDisplay"></div>
     <img id="catImage" alt="Cat of Today">
 
