--- a/index.html
+++ b/index.html
@@ -21,29 +21,151 @@
         #dateDisplay {
             margin-bottom: 20px;
         }
+        #catContainer {
+            position: relative;
+            cursor: pointer;
+            overflow: hidden;
+        }
         #catImage {
             max-width: 100%;
             height: auto;
+            transition: transform 0.2s ease, filter 0.3s ease;
+        }
+        #patEffect {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            width: 150px;
+            height: 150px;
+            border: 4px solid #ff69b4;
+            border-radius: 50%;
+            opacity: 0;
+            pointer-events: none;
+            transition: all 0.3s ease;
+        }
+        #patCount {
+            margin-bottom: 10px;
+            font-size: 24px;
+            font-weight: bold;
+            transition: transform 0.2s ease;
+        }
+        @keyframes patPulse {
+            0% { transform: translate(-50%, -50%) scale(0.8); opacity: 0.7; }
+            50% { transform: translate(-50%, -50%) scale(1.2); opacity: 0.5; }
+            100% { transform: translate(-50%, -50%) scale(1.5); opacity: 0; }
+        }
+        @keyframes float {
+            0% { transform: translateY(0) scale(1) rotate(0deg); opacity: 1; }
+            100% { transform: translateY(-100px) scale(1.5) rotate(360deg); opacity: 0; }
+        }
+        @keyframes particle {
+            0% { transform: translate(0, 0) scale(1); opacity: 1; }
+            100% { transform: translate(var(--tx), var(--ty)) scale(0); opacity: 0; }
+        }
+        .particle {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            pointer-events: none;
+            animation: particle 1s ease-out forwards;
         }
     </style>
 </head>
 <body>
     <h1>Cat of Today</h1>
+    <div id="patCount">Pat Count: 0</div>
     <div id="dateDisplay"></div>
-    <img id="catImage" alt="Cat of Today">
-
+    <div id="catContainer">
+        <img id="catImage" alt="Cat of Today">
+        <div id="patEffect"></div>
+    </div>
     <script>
         const images = ['1.jpeg', '2.jpeg', '3.jpeg'];
         const catImage = document.getElementById('catImage');
         const dateDisplay = document.getElementById('dateDisplay');
+        const patEffect = document.getElementById('patEffect');
+        const patCountDisplay = document.getElementById('patCount');
+        const catContainer = document.getElementById('catContainer');
+        let patCount = 0;
 
         function updateDateAndImage() {
             const today = new Date();
             dateDisplay.textContent = today.toDateString();
-
             const daysSinceEpoch = Math.floor(today.getTime() / (1000 * 60 * 60 * 24));
             const imageIndex = daysSinceEpoch % 3;
             catImage.src = `images/${images[imageIndex]}`;
+        }
+
+        function patCat(event) {
+            patCount++;
+            patCountDisplay.textContent = `Pat Count: ${patCount}`;
+            patCountDisplay.style.transform = 'scale(1.2)';
+            setTimeout(() => { patCountDisplay.style.transform = 'scale(1)'; }, 200);
+
+            // Animate cat
+            catImage.style.transform = 'scale(0.95)';
+            catImage.style.filter = 'brightness(1.2)';
+            setTimeout(() => {
+                catImage.style.transform = 'scale(1)';
+                catImage.style.filter = 'brightness(1)';
+            }, 200);
+
+            // Show pat effect
+            patEffect.style.animation = 'none';
+            patEffect.offsetHeight; // Trigger reflow
+            patEffect.style.animation = 'patPulse 0.5s ease-out';
+
+            // Add multiple hearts
+            for (let i = 0; i < 5; i++) {
+                setTimeout(() => createHeart(), i * 100);
+            }
+
+            // Create particle explosion
+            createParticles(event.clientX, event.clientY);
+
+            // Haptic feedback (if supported)
+            if (navigator.vibrate) {
+                navigator.vibrate(50);
+            }
+        }
+
+        function createHeart() {
+            const heart = document.createElement('div');
+            heart.innerHTML = ['❤️', '😺', '🐾', '🐱'][Math.floor(Math.random() * 4)];
+            heart.style.position = 'absolute';
+            heart.style.fontSize = '24px';
+            heart.style.pointerEvents = 'none';
+            heart.style.left = `${Math.random() * 100}%`;
+            heart.style.top = `${Math.random() * 100}%`;
+            heart.style.animation = 'float 2s ease-out';
+            catContainer.appendChild(heart);
+
+            setTimeout(() => {
+                catContainer.removeChild(heart);
+            }, 2000);
+        }
+
+        function createParticles(x, y) {
+            const rect = catContainer.getBoundingClientRect();
+            const localX = x - rect.left;
+            const localY = y - rect.top;
+
+            for (let i = 0; i < 20; i++) {
+                const particle = document.createElement('div');
+                particle.className = 'particle';
+                particle.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 50%)`;
+                particle.style.left = `${localX}px`;
+                particle.style.top = `${localY}px`;
+                particle.style.setProperty('--tx', `${(Math.random() - 0.5) * 200}px`);
+                particle.style.setProperty('--ty', `${(Math.random() - 0.5) * 200}px`);
+                catContainer.appendChild(particle);
+
+                setTimeout(() => {
+                    catContainer.removeChild(particle);
+                }, 1000);
+            }
         }
 
         // Initialize Telegram Mini App
@@ -53,6 +175,9 @@
 
         // Initial update
         updateDateAndImage();
+
+        // Add click event listener for patting
+        catImage.addEventListener('click', patCat);
     </script>
 </body>
 </html>
