--- a/index.html
+++ b/index.html
@@ -66,12 +66,18 @@
         patCountRef.on('value', (snapshot) => {
             const count = snapshot.val() || 0;
             patCountDisplay.textContent = `Global Pat Count: ${count}`;
+        }, (error) => {
+            console.error("Error fetching pat count:", error);
         });
 
         // Function to increment pat count
         function incrementPatCount() {
             patCountRef.transaction((currentCount) => {
                 return (currentCount || 0) + 1;
+            }).then(() => {
+                console.log("Pat count incremented successfully");
+            }).catch((error) => {
+                console.error("Error incrementing pat count:", error);
             });
         }
 
