fix visibilty text night mode

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-analytics-compat.js"></script>
     <style>
+        body {
+            color: var(--tg-theme-text-color);
+            background-color: var(--tg-theme-bg-color);
+        }
         #catContainer {
             width: 300px;
             height: 300px;
