--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
         // Cat images array
         const catImages = [
-            'cat1.jpg',
-            'cat2.jpg',
-            'cat3.jpg',
+            'cat1.jpeg',
+            'cat2.jpeg',
+            'cat3.jpeg',
             // Add more image filenames as needed
         ];
 
