trying to fix that there is no image nor tap anymore

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         // Initial setup
         updateDateDisplay();
-        updateCatImage();
+        updateCatImage(); // Load cat image on startup
         setInterval(updateCatImage, 24 * 60 * 60 * 1000); // Update cat image every 24 hours
     </script>
 </body>
