--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat of Today</title>
     <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
         #catContainer {
             width: 300px;
             height: 300px;
@@ -12,41 +20,50 @@
             background-position: center;
             cursor: pointer;
         }
+        #userProfile {
+            margin-top: 20px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
     <h1>Cat of Today</h1>
     <h2>Global Pat Count: <span id="counter">0</span></h2>
     <div id="catContainer"></div>
-
+    <div id="userProfile">
+        <h3>Your Profile</h3>
+        <p>Total Pats: <span id="userPatCount">0</span></p>
+    </div>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
-        import { getDatabase, ref, onValue, set, get } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-database.js";
+        import { getDatabase, ref, onValue, set, get, increment } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-database.js";
         import { getStorage, ref as storageRef, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-storage.js";
-
-        const firebaseConfig = {
-            apiKey: "AIzaSyCAZJHR6oxJnefsiLGbutLK10NK4JGLiko",
-            authDomain: "catoftoday-e2451.firebaseapp.com",
-            databaseURL: "https://catoftoday-e2451-default-rtdb.europe-west1.firebasedatabase.app",
-            projectId: "catoftoday-e2451",
-            storageBucket: "catoftoday-e2451.appspot.com",
-            messagingSenderId: "246259753230",
-            appId: "1:246259753230:web:abc91475e03e9f13cf775f",
-            measurementId: "G-53VSVBFRK1"
-        };
+        
+        // Your existing Firebase configuration...
 
         const app = initializeApp(firebaseConfig);
         const db = getDatabase(app);
         const storage = getStorage(app);
         const countRef = ref(db, 'globalPatCount');
-
         const counterElement = document.getElementById('counter');
         const catContainer = document.getElementById('catContainer');
+        const userPatCountElement = document.getElementById('userPatCount');
 
-        // Initialize counter
+        // For demo purposes, we'll use a fixed user ID. In a real app, you'd get this from authentication.
+        const userId = 'user123';
+        const userPatCountRef = ref(db, `users/${userId}/patCount`);
+
+        // Initialize counters
         get(countRef).then((snapshot) => {
             const count = snapshot.val() || 0;
             counterElement.textContent = count;
+        });
+
+        get(userPatCountRef).then((snapshot) => {
+            const count = snapshot.val() || 0;
+            userPatCountElement.textContent = count;
         });
 
         // Listen for real-time updates
@@ -55,34 +72,18 @@
             counterElement.textContent = count;
         });
 
-        // Increment counter
-        catContainer.addEventListener('click', () => {
-            get(countRef).then((snapshot) => {
-                const currentCount = snapshot.val() || 0;
-                const newCount = currentCount + 1;
-                set(countRef, newCount);
-            });
+        onValue(userPatCountRef, (snapshot) => {
+            const count = snapshot.val() || 0;
+            userPatCountElement.textContent = count;
         });
 
-        // Cat image functionality
-        const catImages = ['cat1.jpeg', 'cat2.jpeg', 'cat3.jpeg'];
+        // Increment counters
+        catContainer.addEventListener('click', () => {
+            set(countRef, increment(1));
+            set(userPatCountRef, increment(1));
+        });
 
-        function getCatOfTheDay() {
-            const today = new Date();
-            const dayOfYear = Math.floor((today - new Date(today.getFullYear(), 0, 0)) / 1000 / 60 / 60 / 24);
-            return catImages[dayOfYear % catImages.length];
-        }
-
-        function updateCatImage() {
-            const catImageFilename = getCatOfTheDay();
-            const imageRef = storageRef(storage, 'cat_images/' + catImageFilename);
-            
-            getDownloadURL(imageRef).then((url) => {
-                catContainer.style.backgroundImage = `url(${url})`;
-            }).catch((error) => {
-                console.error("Error getting cat image:", error);
-            });
-        }
+        // Your existing cat image functionality...
 
         // Initial setup
         updateCatImage();
