--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat of Today</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -34,12 +35,14 @@
     <div id="catContainer"></div>
     <div id="userProfile">
         <h3>Your Profile</h3>
+        <p>Welcome, <span id="userName"></span>!</p>
         <p>Total Pats: <span id="userPatCount">0</span></p>
     </div>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
         import { getDatabase, ref, onValue, set, get, increment } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-database.js";
         import { getStorage, ref as storageRef, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-storage.js";
+
         const firebaseConfig = {
             apiKey: "AIzaSyCAZJHR6oxJnefsiLGbutLK10NK4JGLiko",
             authDomain: "catoftoday-e2451.firebaseapp.com",
@@ -50,16 +53,30 @@
             appId: "1:246259753230:web:abc91475e03e9f13cf775f",
             measurementId: "G-53VSVBFRK1"
         };
+
         const app = initializeApp(firebaseConfig);
         const db = getDatabase(app);
         const storage = getStorage(app);
+
         const countRef = ref(db, 'globalPatCount');
         const counterElement = document.getElementById('counter');
         const catContainer = document.getElementById('catContainer');
         const userPatCountElement = document.getElementById('userPatCount');
+        const userNameElement = document.getElementById('userName');
 
-        // For demo purposes, we'll use a fixed user ID. In a real app, you'd get this from authentication.
-        const userId = 'user123';
+        // Telegram WebApp initialization
+        const tg = window.Telegram.WebApp;
+
+        // Ensure the app is ready
+        tg.ready();
+
+        // Get user data from Telegram
+        const user = tg.initDataUnsafe.user;
+        const userId = user ? user.id.toString() : 'anonymous';
+        const userName = user ? user.first_name : 'Anonymous';
+
+        userNameElement.textContent = userName;
+
         const userPatCountRef = ref(db, `users/${userId}/patCount`);
 
         // Initialize counters
@@ -86,12 +103,17 @@
 
         // Increment counter
         catContainer.addEventListener('click', () => {
-            get(countRef).then((snapshot) => {
-                const currentCount = snapshot.val() || 0;
-                const newCount = currentCount + 1;
-                set(countRef, newCount);
-            });
-            set(userPatCountRef, increment(1));
+            if (user) {
+                get(countRef).then((snapshot) => {
+                    const currentCount = snapshot.val() || 0;
+                    const newCount = currentCount + 1;
+                    set(countRef, newCount);
+                });
+                set(userPatCountRef, increment(1));
+                tg.HapticFeedback.impactOccurred('medium');
+            } else {
+                alert("Please open this app in Telegram to pat the cat!");
+            }
         });
 
         // Cat image functionality
@@ -113,6 +135,9 @@
         }
         // Initial setup
         updateCatImage();
+
+        // Expand to full screen
+        tg.expand();
     </script>
 </body>
 </html>
